# cove-image-viewer

./: .gitignore  Cargo.toml  README.md  build.rs  handoff.md
.github/workflows/: build.yml
docs/superpowers/specs/: 2026-06-12-async-loading-improvements-design.md
src/: app.rs  autocrop.rs  browser.rs  cache.rs  decoder.rs  main.rs  theme.rs  updater.rs  viewer.rs
