[package]
name = "cove-image-viewer"
version = "1.2.1"
edition = "2021"
description = "The VLC of image viewers — opens every image"

[dependencies]
eframe = { version = "0.31", features = ["default_fonts", "glow"] }
egui = "0.31"
image = "0.25"
clap = { version = "4", features = ["derive"] }
rfd = "0.15"

# Extended format support (pure Rust)
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
jxl-oxide = "0.12"
rawloader = "0.37"
psd = "0.3"
pcx = "0.2"

# HEIC/AVIF (pure Rust)
heic = { version = "0.1", features = ["av1"] }
openjp2 = "0.6"

# PSD composite fallback parser
byteorder = "1"

# EXIF metadata
kamadak-exif = "0.5"

# Clipboard and OS integration
arboard = "3"
wallpaper = "3"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
default = []

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
panic = "unwind"

[profile.dev]
opt-level = 1
